BUGFIX: Machine view doesn't load - fixed on 03/17/2023

--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -11,7 +11,7 @@
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
 
-  <input type="submit" value="Add new Engineer" class="btn btn-default" />
+  <input type="submit" value="Add new Engineer" />
 }
 
 <br>
