--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -10,11 +10,8 @@
 {
     @Html.LabelFor(model => model.Title)
     @Html.TextBoxFor(model => model.Title)
-    
-    @Html.Label("Add an engineer")
-    @Html.DropDownList("EngineerId")
 
-    <input type="submit" value="Add new Machine" class="btn btn-default" />
+    <input type="submit" value="Add new Machine">
 }
 
 <br>
