--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -15,7 +15,7 @@
 }
 else
 {
-  <h4>This engineer can fix the following machines:</h4>
+  <h4>This engineer can repair the following machines:</h4>
   <ul>
     @foreach(EngineerMachine join in Model.JoinEntities)
     {
