BUGFIX: machine can be saved with empty title - fixed on 03/17/2023

--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -5,6 +5,7 @@
 @model Factory.Models.Machine
 
 <h4>Add a new Machine</h4>
+<p>@Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
 
 @using (Html.BeginForm())
 {
