check that all user stories are functioning

--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
 <h4>Engineers</h4>
 @if (Model["engineers"].Length == 0)
 {
-  <p>No engineers have been added yet!</p>
+  <p>No engineers have been added yet</p>
 } 
 <ul>
   @foreach (Engineer engineer in Model["engineers"])
