--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -13,7 +13,7 @@
 
 @foreach (Machine machine in Model)
 {
-  <li>@Html.ActionLink($"{machine.Title}", "Details", new { id = machine.MachineId })</li>
+  <li>@Html.ActionLink($"{machine.Title}", "Details", new { id = machine.MachineId }) - @machine.Status</li>
 }
 
 <br>
