add styling and background picture

--- a/Factory/wwwroot/css/styles.css
+++ b/Factory/wwwroot/css/styles.css
@@ -1,9 +1,7 @@
-div#footer {
-	position:fixed;
-	bottom:0px;
-	left:0px;
-	width:100%;
-	color:#CCC;
-	background:#333;
-	padding:8px;
+body {
+  background: linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, .8)), url("./../img/background.jpg");
+  position: relative;
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-attachment:scroll;
 }
