--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-expand-lg" style="background-color: rgb(142, 218, 218);">
+  <nav class="navbar navbar-expand-lg" style="background-color: rgb(248, 252, 252);">
     <a class="navbar-brand" href="/"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/" style="color: green;">Home</a>
+          <a class="nav-link" href="/" style="color: black; font-weight: bold; font-size: 24px;" >Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Machines" style="color: green;">Machines</a>
+          <a class="nav-link" href="/Machines" style="color: black; font-weight: bold; font-size: 24px;">Machines</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Engineers" style="color: green;">Engineers</a>
+          <a class="nav-link" href="/Engineers" style="color: black; font-weight: bold; font-size: 24px;">Engineers</a>
         </li>
       </ul>
     </div>
