--- a/Factory/Views/Engineers/Edit.cshtml
+++ b/Factory/Views/Engineers/Edit.cshtml
@@ -2,6 +2,7 @@
   Layout = "_Layout";
 }
 
+@using Factory.Models
 @model Factory.Models.Engineer
 
 <h2>Edit</h2>
@@ -14,6 +15,9 @@
 
   @Html.LabelFor(model => model.Name)
   @Html.EditorFor(model => model.Name)
+  @Html.LabelFor(model => model.Status)
+  @Html.DropDownListFor(model => model.Status, 
+  new SelectList(Enum.GetValues(typeof(EngineerStatus))))
   
   <input type="submit" value="Save" />
 }
