--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -16,7 +16,7 @@ else
 {
   @foreach(Engineer engineer in Model)
   {
-    <li>@Html.ActionLink($"{engineer.Name}", "Details", new { id = engineer.EngineerId })</li>
+    <li>@Html.ActionLink($"{engineer.Name}", "Details", new { id = engineer.EngineerId }) - @engineer.Status</li>
   }
 }
 
