add last inspection date for machines

--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -16,6 +16,8 @@
     @Html.LabelFor(model => model.Status)
     @Html.DropDownListFor(model => model.Status, 
     new SelectList(Enum.GetValues(typeof(Status))))
+    @Html.LabelFor(model => model.InspectionDate)
+    @Html.TextBoxFor(model => model.InspectionDate, new { placeholder = "MM/DD/YYYY" })
 
     <input type="submit" value="Add new Machine">
 }
